# DTV

./: .gitignore  1.json  README.md  list.json  newRecList.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
douyin_steamer_list_demo/: live.rs  liveRooms.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: danmaku.rs  douyu.rs  douyu_win.rs  main.rs  proxy.rs
src-tauri/src/api/: category.rs  live_list.rs  mod.rs  room_info.rs  three_cate.rs
src/components/: DanmakuList.vue  FollowList.vue  Header.vue  Player.vue  PlayerSection.vue  Sidebar.vue  StreamerInfo.vue
src/components/Category/: index.vue
src/components/Category/composables/: useExpand.ts
src/components/CategoryList/: index.vue
src/components/CategoryList/components/: Cate2Grid.vue
src/components/CategoryList/composables/: useCategories.ts  useSelection.ts
src/components/DanmuList/: index.vue
src/components/DouyinCategory/: index.vue
src/components/DouyinCategory/components/: DouyinCate1List.vue  DouyinCate2Grid.vue
src/components/DouyinStreamerList/: index.vue  types.ts
src/components/DouyinStreamerList/composables/: useDouyinLiveRooms.ts
src/components/DouyuCategory/: index.vue
src/components/DouyuCategory/components/: Cate1List.vue  Cate2Grid.vue  Cate3List.vue
src/components/DouyuCategory/composables/: useCategories.ts  useSelection.ts
src/components/DouyuStreamerList/: index.vue
src/components/DouyuStreamerList/composables/: useLiveData.ts
src/components/FollowsList/: index.vue
src/components/LiveList/: index.vue
src/components/StreamerInfo/: index.vue
src/components/StreamerList/: index.vue
src/components/player/: DanmuList.vue  MainPlayer.vue  StreamerInfo.vue  demo.vue  index.vue  types.ts
src/composables/: useLiveData.ts
src/constants/: index.ts
src/layout/: Header.vue  MainLayout.vue  Sidebar.vue
src/layouts/: Header.vue  MainLayout.vue  Sidebar.vue
src/main/: ipc.ts  main.ts  preload.ts
src/pages/: DouyinHomeView.vue  DouyinPlayerView.vue  DouyuHomeView.vue  DouyuPlayerView.vue  PlayerView.vue
src/renderer/: App.tsx  index.html
src/renderer/context/: ThemeContext.tsx
src/renderer/hooks/: useAnchor.ts  useDanmaku.ts  useFollowList.ts
src/renderer/types/: index.ts
src/router/: index.ts
src/services/: danmaku.ts  douyu.ts
src/store/: categoryStore.ts  followStore.ts  index.ts
src/stores/: theme.ts
src/styles/: global.css
src/types/: streamer.ts
src/utils/: index.ts
src/views/: HomeView.vue  PlayerView.vue
(+8 files in other folders)
