[package]
name = "dtv"
version = "2.0.0"
description = "A Tauri App"
authors = ["c-zeong"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dtv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
md-5 = "0.10.6"
deno_core = "0.288.0"
regex = "1.10.4"
isahc = { version = "1.7", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
url = "2.4"
native-tls = "0.2"
rand = "0.8"
futures-util = "0.3"
urlencoding = "2.1.0"
percent-encoding = "2.1"
reqwest = { version = "0.11", features = ["json", "stream", "cookies", "brotli"] }
actix-web = "4"
actix-cors = "0.7"
awc = { version = "3.4.0", features = ["tls-rustls-0_22"] }
bytes = "1"
log = "0.4"
thiserror = "1.0"

[features]
# default = ["custom-protocol"] # Removed problematic line
